# DFRobot_ID809_I2C_HAL-Micropython

./: README.md  example.py  id809.py
rpi/: ID809.py  example.py
rpi2/: id809.py
rpi3/: id809.py  try1.py
rpi4/: example.py  id809.py  test_i2c.py  test_sensor.py
rpi5-test/: id809.py  test_sensor.py
rpi6/: dfrobot_id809.py  example.py
rpi7/: CMakeLists.txt  DFRobot_ID809_I2C.cpp  DFRobot_ID809_I2C.h  example.cpp
